fixed mathjax overflow issue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -74,6 +74,7 @@ figure.image {
  */
 .MathJax_Display {
     font-size: 14px;
+    overflow: auto;
 }
 
 
